--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python
+
+utterances.csv
+chat.csv
