--- a/.gitignore
+++ b/.gitignore
@@ -215,4 +215,6 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python
 
 utterances.csv
+*.csv
 chat.csv
+*.json
